--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 alabaster==0.7.16
+alembic==1.13.1
 amqp==5.2.0
+attrs==23.2.0
 Babel==2.15.0
 billiard==4.2.0
+blinker==1.8.2
+cachelib==0.13.0
 celery==5.4.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
@@ -10,22 +14,46 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+Deprecated==1.2.14
 docutils==0.21.2
+flasgger==0.9.7.1
+Flask==3.0.3
+Flask-Limiter==3.7.0
+Flask-OAuthlib==0.9.6
+Flask-WTF==1.2.1
 greenlet==3.0.3
 idna==3.7
 imagesize==1.4.1
+importlib_resources==6.4.0
 iniconfig==2.0.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 kombu==5.3.7
+limits==3.12.0
+Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
+mistune==3.0.2
+oauthlib==2.1.0
+ordered-set==4.1.0
 packaging==24.0
 pluggy==1.5.0
+prometheus-flask-exporter==0.23.0
+prometheus_client==0.20.0
 prompt_toolkit==3.0.45
 Pygments==2.18.0
 pytest==8.2.1
 python-dateutil==2.9.0.post0
+PyYAML==6.0.1
 redis==5.0.4
+referencing==0.35.1
 requests==2.32.3
+requests-oauthlib==1.1.0
+rich==13.7.1
+rpds-py==0.18.1
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==7.3.7
@@ -36,10 +64,13 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 SQLAlchemy==2.0.30
+-e git+https://github.com/Jhoelperaltap/starfish.git@326ea6e9a8f7cde5323f631c6bbd8a6e66573968#egg=starfish
 typing_extensions==4.12.1
 tzdata==2024.1
 urllib3==2.2.1
 vine==5.1.0
 wcwidth==0.2.13
 websockets==12.0
+Werkzeug==3.0.3
+wrapt==1.16.0
 WTForms==3.1.2
